Add backround image, GitHub link

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -55,7 +55,7 @@ function saveCheckboxState(urlCheck) {
 
 <footer>
     <hr />
-    Copyrights © <%= new Date().getFullYear() %>
+    Copyrights © <%= new Date().getFullYear() %> | <a href="https://github.com/TritescuBogdan"> GitHub </a>
 </footer>
 
 </html>
