--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(27, 27, 27);
+  background-image: url("/images/background.png");
 }
 * {
   color: rgb(237, 237, 237) !important;
